--- a/index.html
+++ b/index.html
@@ -6,46 +6,85 @@
 	<title>宏伟家具公司</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
+	<link rel="stylesheet" type="text/css" href="style/comm.css">
+	<link rel="stylesheet" type="text/css" href="style/style2.css">
 <body>
-	<header>
-		<div class="head">
-			<div class="logo_box">
-				<img src="images/logo.fw.png" class="logo">
-				<img src="images/logo-font.fw.png" class="logo-font">
-			</div>
-			<div class="nav">
-				<ul>
-				  <li><a href="javascript:;" id="product">产品<span class="glyphicon glyphicon-menu-down"></span></a> </li>
-				  <li><a href="javascript:;" id="pingpai">品牌<span class="glyphicon glyphicon-menu-down"></span></a></li>
-				  <li><a href="javascript:;" id="guke">顾客服务<span class="glyphicon glyphicon-menu-down"></span></a></li>
-				  <li><a href="javascript:;" id="hezuo">合作加盟<span class="glyphicon glyphicon-menu-down"></span></a></li>
-				</ul>
-			</div>
+	<header id="header">
+		<section id="header-main">
+			 <div class="logo_box">
+			 	<img src="images/logo.fw.png" class="logo_photo">
+			 	<img src="images/logo-font.fw.png" class="logo_font">
+			 </div>
+			 <div id="nav">
+			 	<ul>
+			 		<li class="has-inner" data-index="0"><a href="javascript:;">产品</a><span class="glyphicon glyphicon-menu-down"></span></i></li>
+			 		<li class="has-inner" data-index="1" ><a href="javascript:;">品牌</a><span class="glyphicon glyphicon-menu-down"></span></i></li>
+			 		<li class="has-inner" data-index="2" ><a href="javascript:;">顾客服务</a><span class="glyphicon glyphicon-menu-down"></span></i></li>
+			 		<li class="has-inner" data-index="3"><a href="javascript:;">合作加盟</a><span class="glyphicon glyphicon-menu-down"></span></i></li>
+			 	</ul>
+			 </div>
+		</section>
+		<div id="nav-inner">
+			<figure>
+				<figcaption class="nav-sub">
+					<ul>
+						<li><a href="javascript:;">客厅</a></li>
+						<li><a href="javascript:;">餐厅</a></li>
+						<li><a href="javascript:;">卧室</a></li>
+						<li><a href="javascript:;">书房</a></li>
+						<li><a href="javascript:;">床垫</a></li>
+						<li><a href="javascript:;">床品</a></li>
+					</ul>
+				</figcaption>
+				<figcaption class="nav-pic">
+					<img src="images/sofa.jpg">
+				</figcaption>
+			</figure>
+			<figure>
+				<figcaption class="nav-sub">
+					<ul>
+						<li><a href="javascript:;">品牌介绍</a></li>
+						<li><a href="javascript:;">品牌荣誉</a></li>
+						<li><a href="javascript:;">发展历程</a></li>
+						<li><a href="javascript:;">品牌活动</a></li>
+						<li><a href="javascript:;">联系方式</a></li>
+					</ul>
+				</figcaption>
+				<figcaption class="nav-pic" >
+					<img src="images/正厅.jpg">
+				</figcaption>
+			</figure>
+			<figure >
+				<figcaption class="nav-sub">
+					<ul>
+						<li><a href="javascript:;">售后流程</a></li>
+						<li><a href="javascript:;">维修服务</a></li>
+						<li><a href="javascript:;">常见问题</a></li>
+						<li><a href="javascript:;">使用维护</a></li>
+					</ul>
+				</figcaption>
+				<figcaption class="nav-pic" >
+					<img src="images/shouhou.png">
+				</figcaption>
+			</figure>
+			<figure>
+				<figcaption class="nav-sub">
+					<ul>
+						<li><a href="javascript:;">经销商联系</a></li>
+						<li><a href="javascript:;">经销商网点</a></li>
+					</ul>
+				</figcaption>
+				<figcaption class="nav-pic" >
+					<img src="images/severice.png">
+				</figcaption>
+			</figure>
 			
 		</div>
 	</header>
-	<div class="cont">
-		<div class="hid" id="chose">
-				<div class="left_box">
-					<div class="left_title">
-						<ul>
-							<li><a href="javascript:;">>&nbsp;客房</a></li>
-							<li><a href="javascript:;">>&nbsp;正厅</a></li>
-							<li><a href="javascript:;">>&nbsp;餐厅</a></li>
-							<li><a href="javascript:;">>&nbsp;书房</a></li>
-							<li><a href="javascript:;">>&nbsp;卧室</a></li>
-							<li><a href="javascript:;">>&nbsp;正厅</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="right_box">
-					<img src="images/11192n2v86.jpg">
-				</div>	
-			</div>	
-		</div>
-	
+
 </body>
 	<script src="js/jquery.js"></script>
+	<script src="js/index.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </head>
 </html>
