--- a/index.html
+++ b/index.html
@@ -102,9 +102,21 @@
 			<li>
 			    
 				<img src="images/lunbo4.jpg" alt="">
-				<p class="desc">在这里有优惠活动等着你哦！</p>
+				<p class="desc">在这里有优惠活动等着你哦！ </p>
 			</li>
 		</ul>
+	</div>
+	<div class="leader">
+		<div class="leader_logo">
+			<ul>
+				<li class="t1"><b></b><i></i><span>客厅</span><a href="javascript:;"></a></li>
+				<li class="t2"><b></b><i></i><span>餐厅</span><a href="javascript:;"></a></li>
+				<li class="t3"><b></b><i></i><span>书房</span><a href="javascript:;"></a></li>
+				<li class="t4"><b></b><i></i><span>卧房</span><a href="javascript:;"></a></li>
+				<li class="t5"><b></b><i></i><span>床垫</span><a href="javascript:;"></a></li>
+				<li class="t6"><b></b><i></i><span>床品</span><a href="javascript:;"></a></li>
+			</ul>
+		</div>
 	</div>
 </body>
 	<script src="js/jquery.js"></script>
