--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<link rel="stylesheet" type="text/css" href="style/comm.css">
 	<link rel="stylesheet" type="text/css" href="style/style2.css">
+	<link rel="stylesheet" type="text/css" href="style/index.css">
 <body>
 	<header id="header">
 		<section id="header-main">
@@ -118,6 +119,51 @@
 			</ul>
 		</div>
 	</div>
+	<div class="furniture_box">
+			<p>宏伟定制家具</p>
+			<section style="overflow:hidden">
+				<div class="furniture_left">
+					<a href="javascript:;"><img src="images/furniture_left.jpg"></a>
+				</div>
+				<div class="furniture_right">
+					<ul id="listbox">
+						<li><a href="javascript:;"><img src="images/furniture_right.jpg"></a></li>
+						<li><a href="javascript:;"><img src="images/furniture_two.jpg"></a></li>
+						<li><a href="javascript:;"><img src="images/furniture_three.jpg"></a></li>
+						<li><a href="javascript:;"><img src="images/furniture_two.jpg"></a></li>
+					</ul>
+				</div>
+			</section>
+	</div>
+	<div class="about">
+		<h2>关于宏伟家具</h2>
+		<section>
+			<div class="about-left">
+				<div class="about-brand">
+					<ul id="about-brand-tab">
+						<li class="act">- 品牌荣誉 -</li>
+						<li>- 品牌历史 -</li>
+					</ul>
+					<ul id="about-brand-con">
+						<li>
+							2015年，“红苹果”荣获“家居绿色环保领跑品牌” 、“全国产品和服务质量诚信示范企业”等殊荣。更有胜者，“红苹果”携手郑州高盛、宜昌美光经销商伙伴20年荣获首届中国家具“奥斯卡”颁奖盛典颁发的“中国家具黄金搭档•钻石楷模奖”。2016年，“红苹果”荣获“2015-2016中国 家居产业（北京）十大时尚创意家具品牌”...
+						</li>
+						<li>
+							致力于引领家具时尚，倡导健康生活的“红苹果”将一如既往地为打造健康、环保、个性、时尚的家居产品而不断开拓进取。
+						</li>
+					</ul>
+					<a  class="brand-more">查看详细 -></a>
+				</div>
+			</div>
+			<div class="about-right">
+				<div class="right_content">
+					<ul>
+						<li><img src="images/right_content_1.jpg"></li>
+						<li><img src="images/right_content_2.jpg"></li>
+					</ul>
+				</div>
+			</div>
+		</section>
 </body>
 	<script src="js/jquery.js"></script>
 	<script src="js/index.js"></script>
