--- a/index.html
+++ b/index.html
@@ -164,6 +164,60 @@
 				</div>
 			</div>
 		</section>
+	</div>
+	<footer>
+		<div class="bottom_box">
+			<div class="title">
+				<ul>
+					<h4>产品</h4>
+					<li><a href="javascript:;">沙发</a></li>
+					<li><a href="javascript:;">餐厅</a></li>
+					<li><a href="javascript:;">书房</a></li>
+					<li><a href="javascript:;">床垫</a></li>
+					<li><a href="javascript:;">卧室</a></li>
+					<li><a href="javascript:;">卧室</a></li>
+				</ul>
+				<ul>
+					<h4>品牌</h4>
+					<li><a href="javascript:;">品牌荣誉</a></li>
+					<li><a href="javascript:;">品牌历史</a></li>
+					<li><a href="javascript:;">品牌介绍</a></li>
+					<li><a href="javascript:;">品牌活动</a></li>
+					<li><a href="javascript:;">联系方式</a></li>
+				</ul>
+				<ul>
+					<h4>顾客服务</h4>
+					<li><a href="javascript:;">售后流程</a></li>
+					<li><a href="javascript:;">维修服务</a></li>
+					<li><a href="javascript:;">常见问题</a></li>
+					<li><a href="javascript:;">问题反馈</a></li>
+				</ul>
+				<ul>
+					<h4>合作加盟</h4>
+					<li><a href="javascript:;">经销商网点</a></li>
+					<li><a href="javascript:;">经销商联系</a></li>
+				</ul>
+				<ul>
+					<h4>辅助栏目</h4>
+					<li><a href="javascript:;">法律声明</a></li>
+					<li><a href="javascript:;">网站地图</a></li>
+					<li><a href="javascript:;">关于分享</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="bottom_footer">
+			<div class="friend_link">
+				<ul>
+					<li><a href="javascript:;">人才招聘</a></li>
+					<li><a href="javascript:;">门店查询</a></li>
+					<li><a href="javascript:;">联系我们</a></li>
+					<li><a href="javascript:;">网站地图</a></li>
+					<li><a href="javascript:;">全国免费服务热线：8388-1962</a></li>
+				</ul>
+				<p>© 2015 E8网络技术联盟 版权所有  </p>
+			</div>
+		</div>
+	</footer>
 </body>
 	<script src="js/jquery.js"></script>
 	<script src="js/index.js"></script>
