--- a/datiles/keting.html
+++ b/datiles/keting.html
@@ -19,7 +19,7 @@
 			 </div>
 			 <div id="nav">
 			 	<ul>
-			 		<li class="has-inner" data-index="0"><a href="javascript:;">产品</a><span class="glyphicon glyphicon-menu-down"></span></i></li>
+			 		<li class="has-inner" data-index="0"><a href="product.html">产品</a><span class="glyphicon glyphicon-menu-down"></span></i></li>
 			 		<li class="has-inner" data-index="1" ><a href="javascript:;">品牌</a><span class="glyphicon glyphicon-menu-down"></span></i></li>
 			 		<li class="has-inner" data-index="2" ><a href="javascript:;">顾客服务</a><span class="glyphicon glyphicon-menu-down"></span></i></li>
 			 		<li class="has-inner" data-index="3"><a href="javascript:;">合作加盟</a><span class="glyphicon glyphicon-menu-down"></span></i></li>
@@ -30,7 +30,7 @@
 			<figure>
 				<figcaption class="nav-sub">
 					<ul>
-						<li><a href="javascript:;">客厅</a></li>
+						<li><a href="keting.html">客厅</a></li>
 						<li><a href="javascript:;">餐厅</a></li>
 						<li><a href="javascript:;">卧室</a></li>
 						<li><a href="javascript:;">书房</a></li>
